adding my finished website

--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>My Website</title>
 </head>
 <body>
+
+    <h1>My Favorite Things</h1>
+
+    <img src="me.jpg" width="100">
+
+    <h2>My Top Movies</h2>
+
+    <ol>
+        <li>Friday</li>
+        <li>Rush Hour 1, 2, and 3</li>
+        <li>Training Day</li>
+        <li>The Hobbit</li>
+        <li>Sicario</li>
+    </ol>
+
+    <h2>My Favorite Places to Visit</h2>
+
+    <ul>
+        <li>Las Vegas</li>
+        <li>Jamaica</li>
+        <li>Cabo San Lucas</li>
+        <li>Puerto Vallarta</li>
+        <li>Cancún</li>
+    </ul>
+
+    <a href="https://www.linkedin.com/in/larenzo-burt-076b6a42/">LinkedIn</a>
+
 </body>
 </html>
