--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>My Website</title>
 </head>
 <body>
-
+     <!--heading-->
     <h1>My Favorite Things</h1>
 
     <img src="me.jpg" width="100">
